tests/golden/errors/unknown_decorator.py
@memoize
def f() -> int:
    return 1


print(f())
